@@ -5,6 +5,9 @@ h2. Spec::Rails - Installation - Quick Start
 
 h4. Install
 
+We strongly recommend you install RSpec and Spec::Rails as plugins (as opposed to relying on an RSpec gem).
+See special instructions below if you want to install the HEAD of the trunk, or an older version.
+
 <pre>
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/{svn_tag: }/rspec
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/{svn_tag: }/rspec_on_rails
@@ -25,7 +28,7 @@ Once the plugin is installed, you must bootstrap your Rails app with RSpec. Stan
 ruby script/generate rspec
 </pre>
 
-This will generate the various files needed to use RSpec with Rails and install RSpec Rake tasks.
+This will generate the various files needed to use RSpec with Rails.
 
 h4. Run specs with rake ...
 
@@ -39,9 +42,9 @@ h4. ... or run specs with scripts/spec
 ruby script/spec spec
 </pre>
 
-h2. Spec::Rails - Installation - Living on the Edge
+h2. Living on the Edge
 
-If you prefer to live dangerously you can get the HEAD of the trunk.
+If you prefer to live dangerously you can get the HEAD of the trunk instead of installing from a tag.
 
 <pre>
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/trunk/rspec
@@ -55,51 +58,14 @@ ruby script/plugin install -x svn://rubyforge.org/var/svn/rspec/trunk/rspec
 ruby script/plugin install -x svn://rubyforge.org/var/svn/rspec/trunk/rspec_on_rails
 </pre>
 
-h2. Spec::Rails - Installation - The Long Version
-
-Spec::Rails is a standard Rails plugin that can be installed with Rails' familiar <tt>script/plugin</tt> tool.
-You also need rspec core in order to use it, and your installed rspec must be the same version as your installed
-rspec_on_rails plugin. You can install rspec as a gem,
-or you can install it as a plugin aside the rspec_on_rails plugin. We recommend the plugin approach, as it
-allows you to maintain different versions of rspec_on_rails in different apps.
-
-h3. Installation and use of the rspec gem
-
-h4. Install the rspec gem
-
-<pre>
-gem install rspec
-</pre>
-
-h4. Run specs with rake ...
-
-<pre>
-rake spec
-</pre>
-
-h4. ... or run specs with the installed spec command.
-
-<pre>
-spec spec
-</pre>
-
-h3. Installation of rspec_on_rails and rspec as plugins
-
-h4. Release 0.9 and later
-
-<pre>
-ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/REL_X_Y_Z/rspec
-ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/REL_X_Y_Z/rspec_on_rails
-</pre>
-
-h4. Releases 0.7.5 to 0.8.x (not really recommended at this point)
+h2. Releases 0.7.5 to 0.8.x (not really recommended at this point)
 
 <pre>
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/REL_X_Y_Z/rspec
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/REL_X_Y_Z/rspec_on_rails/vendor/plugins/rspec_on_rails
 </pre>
 
-h4. Releases < 0.7.5 (really not recommended at this point)
+h2. Releases < 0.7.5 (really not recommended at this point)
 
 <pre>
 ruby script/plugin install svn://rubyforge.org/var/svn/rspec/tags/REL_X_Y_Z/rspec
